# latin1-to-utf8

./: .gitignore  CMakeLists.txt  KmpSearch.cc  KmpSearch.h  LICENSE  README.md  README.org  all_tests.cc  config.h.in  kmp.cc  kmp.h  kmp_tests.cc  l1u8recode.cc  l1u8recode.h  l1u8recode_tests.cc  latin1-to-utf8.c  latin1-to-utf8.h  main.c  main.cc  ppa_config.cmake  version.cmake
CMakeModules/: UploadPPA.cmake
Debug/: config.h
doc/: CMakeLists.txt  l1u8recode.1
